# CppMonotoneCubicInterpolation

./: CMakeLists.txt  LICENSE  ReadMe.md
data/cubic/: test-hermit.in  test-hermit.out  test-hermite.in  test-hermite.out  test-monotone.in  test-monotone.out
hermit/: CMakeLists.txt
hermit/demo/: hermit_demo.cpp
hermit/include/: hermit_cubic_interpolation.h
hermit/include/base/: cubic_hermite_spline.h  misc.h
hermit/src/: hermit_cubic_interpolation.cpp  monotone_cubic_interpolation.cpp
hermit/src/base/: cubic_hermite_spline.cpp
hermit/tests/: monotone_cubic_loop_test.cpp  monotone_cubic_test_1.cpp  monotone_cubic_test_3.cpp  monotone_cubic_test_4.cpp
hermite/: CMakeLists.txt
hermite/demo/: hermite_demo.cpp
hermite/include/: hermite_cubic_interpolation.h  monotone_cubic_interpolation.h
hermite/include/base/: cubic_hermite_spline.h  cubic_interpolation.h
hermite/src/: hermite_cubic_interpolation.cpp  monotone_cubic_interpolation.cpp
hermite/tests/: monotone_cubic_test_2.cpp
matlab/: f_my_plot.m  plot_results.asv  plot_results.m
